objects/LBI__RecommendationStage__c.object
<CustomObject>
    <description>Staging table holds raw API records before processing.</description>
    <fields>
        <fullName>LBI__AccountExtension_ExternalId__c</fullName>
        <formula>LBI__RecommendationAccountId__c</formula>
        <label>AccountExtension_ExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__CountedInStats__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Counted In Stats</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ExpirationDate__c</fullName>
        <description>This field is not used by the Recommendation Object. However, it is kept because the API sends it. We must keep all the fields sent by the API</description>
        <inlineHelpText>This field is not used by the Recommendation Object. However, it is kept because the API sends it.</inlineHelpText>
        <label>Expiration Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LastDispositionDate__c</fullName>
        <label>Last Disposition Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LastDispositionedBy__c</fullName>
        <label>Last Dispositioned By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeAccountId__c</fullName>
        <description>This matches LEAccountExternalID in the API</description>
        <label>Lattice Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LaunchRunId__c</fullName>
        <label>Launch Run Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Likelihood__c</fullName>
        <label>Likelihood</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ModelId__c</fullName>
        <label>Model Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__MonetaryValue__c</fullName>
        <label>Monetary Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LBI__Play_PlayId__c</fullName>
        <label>Play Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PreLeadId__c</fullName>
        <externalId>true</externalId>
        <label>PreLead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PriorityId__c</fullName>
        <description>This field is not used by the Recommendation Object. However, it is kept because the API sends it. We must keep all the fields sent by the API</description>
        <inlineHelpText>This field is not used by the Recommendation Object. However, it is kept because the API sends it.</inlineHelpText>
        <label>Priority Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ProcessingStatus__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Processed - Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__Rank__c</fullName>
        <label>Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RecommendationAccountId__c</fullName>
        <label>Recommendation Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RowNumber__c</fullName>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RunDate__c</fullName>
        <label>Run Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lattice Recommendation Stage</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__DisplayName__c</columns>
        <columns>LBI__Description__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__Play_PlayId__c</columns>
        <columns>LBI__PreLeadId__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__LaunchRunId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Recommendation Stage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Recommendation Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>